# mstuca_bot_alpha

./: main.py  pyproject.toml  Расписание.xlsx
